Fix overflow

--- a/client/src/components/Lists/NewChaptersList/NewChaptersList.module.scss
+++ b/client/src/components/Lists/NewChaptersList/NewChaptersList.module.scss
@@ -1,5 +1,6 @@
 .group {
   overflow-y: scroll;
+  max-height: 100%;
 }
 
 .date {
